--- a/themes/Coinsence/less/variables.less
+++ b/themes/Coinsence/less/variables.less
@@ -46,3 +46,7 @@
 @topbar-color-icon-bg: #fff;
 @topbar-color-bg: #fff;
 @topbar-color-border: #e8e8e8;
+@topbar-color-menu-bg: #fff;
+@topbar-color-menu-item-border: #fff;
+@topbar-color-menu-item-hover-bg: #f7f7f7;
+@topbar-color-menu-item-hover-border: #6fdbe8;
